--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "00c5992a",
+   "id": "d5c798c5",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9db8f6ca",
+   "id": "f03b8077",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cac8c782",
+   "id": "15d90707",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e0bfdff",
+   "id": "118c8a87",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13184acf",
+   "id": "ef149312",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05836966",
+   "id": "a1f1c2f3",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8695a1f6",
+   "id": "d7328f2d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:39:30.314965Z",
-     "iopub.status.busy": "2024-10-15T10:39:30.314759Z",
-     "iopub.status.idle": "2024-10-15T10:39:34.633001Z",
-     "shell.execute_reply": "2024-10-15T10:39:34.632398Z"
+     "iopub.execute_input": "2024-10-15T10:48:28.688057Z",
+     "iopub.status.busy": "2024-10-15T10:48:28.687626Z",
+     "iopub.status.idle": "2024-10-15T10:48:32.988982Z",
+     "shell.execute_reply": "2024-10-15T10:48:32.988424Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c6084e2",
+   "id": "2fcbcd0b",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc4eff47",
+   "id": "d5ab9f53",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de73cabc",
+   "id": "0a2fb758",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c8557f7",
+   "id": "73daf6a5",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82475594",
+   "id": "14ec7cfd",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "840d928e",
+   "id": "12c1ed96",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47aa3e3b",
+   "id": "8642b2af",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "375368f4",
+   "id": "f249508b",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "85dfe806",
+   "id": "d9b01151",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:39:34.635320Z",
-     "iopub.status.busy": "2024-10-15T10:39:34.634871Z",
-     "iopub.status.idle": "2024-10-15T10:39:36.527870Z",
-     "shell.execute_reply": "2024-10-15T10:39:36.527280Z"
+     "iopub.execute_input": "2024-10-15T10:48:32.991456Z",
+     "iopub.status.busy": "2024-10-15T10:48:32.990888Z",
+     "iopub.status.idle": "2024-10-15T10:48:34.861364Z",
+     "shell.execute_reply": "2024-10-15T10:48:34.860759Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a49fb1b",
+   "id": "05eaae34",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9e25f22e",
+   "id": "eb34be84",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:39:36.530072Z",
-     "iopub.status.busy": "2024-10-15T10:39:36.529735Z",
-     "iopub.status.idle": "2024-10-15T10:39:36.533470Z",
-     "shell.execute_reply": "2024-10-15T10:39:36.532894Z"
+     "iopub.execute_input": "2024-10-15T10:48:34.863426Z",
+     "iopub.status.busy": "2024-10-15T10:48:34.863055Z",
+     "iopub.status.idle": "2024-10-15T10:48:34.866958Z",
+     "shell.execute_reply": "2024-10-15T10:48:34.866345Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5263ec9",
+   "id": "d1feea41",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df20469c",
+   "id": "01512f9b",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eed7fea9",
+   "id": "08ca7309",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6ce572d",
+   "id": "10800318",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b8eeb06d",
+   "id": "355ffc65",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:39:36.535327Z",
-     "iopub.status.busy": "2024-10-15T10:39:36.535143Z",
-     "iopub.status.idle": "2024-10-15T10:39:36.578202Z",
-     "shell.execute_reply": "2024-10-15T10:39:36.577693Z"
+     "iopub.execute_input": "2024-10-15T10:48:34.868919Z",
+     "iopub.status.busy": "2024-10-15T10:48:34.868529Z",
+     "iopub.status.idle": "2024-10-15T10:48:34.912777Z",
+     "shell.execute_reply": "2024-10-15T10:48:34.912251Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e39ba1b",
+   "id": "7e9ecca8",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "664a2327",
+   "id": "72f4c5a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:39:36.580111Z",
-     "iopub.status.busy": "2024-10-15T10:39:36.579755Z",
-     "iopub.status.idle": "2024-10-15T10:39:36.646754Z",
-     "shell.execute_reply": "2024-10-15T10:39:36.646183Z"
+     "iopub.execute_input": "2024-10-15T10:48:34.914813Z",
+     "iopub.status.busy": "2024-10-15T10:48:34.914501Z",
+     "iopub.status.idle": "2024-10-15T10:48:34.982303Z",
+     "shell.execute_reply": "2024-10-15T10:48:34.981669Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4accca33",
+   "id": "ec5df752",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "476a3081",
+   "id": "e05ba57e",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8225f967",
+   "id": "f4cd73e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:39:36.648914Z",
-     "iopub.status.busy": "2024-10-15T10:39:36.648568Z",
-     "iopub.status.idle": "2024-10-15T10:39:36.677138Z",
-     "shell.execute_reply": "2024-10-15T10:39:36.676536Z"
+     "iopub.execute_input": "2024-10-15T10:48:34.984577Z",
+     "iopub.status.busy": "2024-10-15T10:48:34.984087Z",
+     "iopub.status.idle": "2024-10-15T10:48:35.014563Z",
+     "shell.execute_reply": "2024-10-15T10:48:35.014011Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fbe8c07",
+   "id": "01c5e980",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ebac27e",
+   "id": "30df2cfb",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8540aa61",
+   "id": "77370940",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5008de1e",
+   "id": "7b1a7fc5",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88f278f0",
+   "id": "fa4a98e9",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2de2c20e",
+   "id": "f317f879",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:39:36.679340Z",
-     "iopub.status.busy": "2024-10-15T10:39:36.678972Z",
-     "iopub.status.idle": "2024-10-15T10:39:36.683339Z",
-     "shell.execute_reply": "2024-10-15T10:39:36.682774Z"
+     "iopub.execute_input": "2024-10-15T10:48:35.016740Z",
+     "iopub.status.busy": "2024-10-15T10:48:35.016258Z",
+     "iopub.status.idle": "2024-10-15T10:48:35.020567Z",
+     "shell.execute_reply": "2024-10-15T10:48:35.019911Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa5e90d4",
+   "id": "c7bd8121",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "823623f7",
+   "id": "d7412fbb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:39:36.685516Z",
-     "iopub.status.busy": "2024-10-15T10:39:36.685066Z",
-     "iopub.status.idle": "2024-10-15T10:39:36.688189Z",
-     "shell.execute_reply": "2024-10-15T10:39:36.687550Z"
+     "iopub.execute_input": "2024-10-15T10:48:35.022611Z",
+     "iopub.status.busy": "2024-10-15T10:48:35.022256Z",
+     "iopub.status.idle": "2024-10-15T10:48:35.025280Z",
+     "shell.execute_reply": "2024-10-15T10:48:35.024639Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9698a259",
+   "id": "e6e71c12",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7a41071b",
+   "id": "d1c64640",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:39:36.689999Z",
-     "iopub.status.busy": "2024-10-15T10:39:36.689655Z",
-     "iopub.status.idle": "2024-10-15T10:39:39.277570Z",
-     "shell.execute_reply": "2024-10-15T10:39:39.276966Z"
+     "iopub.execute_input": "2024-10-15T10:48:35.027073Z",
+     "iopub.status.busy": "2024-10-15T10:48:35.026760Z",
+     "iopub.status.idle": "2024-10-15T10:48:37.608122Z",
+     "shell.execute_reply": "2024-10-15T10:48:37.607535Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8d2cde2",
+   "id": "44913b79",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3add78fe",
+   "id": "bce6aca3",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6248d536",
+   "id": "4661aad9",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b680eda",
+   "id": "3570fe25",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1f7f1c48",
+   "id": "4506ef45",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:39:39.279661Z",
-     "iopub.status.busy": "2024-10-15T10:39:39.279277Z",
-     "iopub.status.idle": "2024-10-15T10:39:39.283310Z",
-     "shell.execute_reply": "2024-10-15T10:39:39.282812Z"
+     "iopub.execute_input": "2024-10-15T10:48:37.610347Z",
+     "iopub.status.busy": "2024-10-15T10:48:37.609952Z",
+     "iopub.status.idle": "2024-10-15T10:48:37.614019Z",
+     "shell.execute_reply": "2024-10-15T10:48:37.613477Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f486954d940>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f37f7f85940>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b2fa9c8",
+   "id": "a74dbae8",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "365f5939",
+   "id": "1c8c3829",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19691968",
+   "id": "04805caa",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64f37218",
+   "id": "378f1193",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "aa641715",
+   "id": "19efbe2a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:39:39.285027Z",
-     "iopub.status.busy": "2024-10-15T10:39:39.284830Z",
-     "iopub.status.idle": "2024-10-15T10:39:39.287952Z",
-     "shell.execute_reply": "2024-10-15T10:39:39.287340Z"
+     "iopub.execute_input": "2024-10-15T10:48:37.615869Z",
+     "iopub.status.busy": "2024-10-15T10:48:37.615548Z",
+     "iopub.status.idle": "2024-10-15T10:48:37.618722Z",
+     "shell.execute_reply": "2024-10-15T10:48:37.618139Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b977431e",
+   "id": "d5a0a25c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:39:39.289800Z",
-     "iopub.status.busy": "2024-10-15T10:39:39.289367Z",
-     "iopub.status.idle": "2024-10-15T10:39:40.371728Z",
-     "shell.execute_reply": "2024-10-15T10:39:40.371165Z"
+     "iopub.execute_input": "2024-10-15T10:48:37.620681Z",
+     "iopub.status.busy": "2024-10-15T10:48:37.620334Z",
+     "iopub.status.idle": "2024-10-15T10:48:38.697347Z",
+     "shell.execute_reply": "2024-10-15T10:48:38.696775Z"
     }
    },
    "outputs": [
